fix(about-me): text align small fix

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -354,7 +354,7 @@ table {
 
 .psychology-explanation {
     padding: 30px;
-    text-align: center;
+    text-align: justify;
 }
 
 /* Article */
